SplashActivity, refactor to kotlin, remove unwanted permission logic.

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -35,7 +35,7 @@
             android:alpha="0.4"/>
 
         <Button
-            android:id="@+id/button_ocr_search"
+            android:id="@+id/recogniseTextButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
@@ -68,7 +68,7 @@
             android:alpha="0.4"/>
 
         <Button
-            android:id="@+id/button_other_search"
+            android:id="@+id/recogniseImageButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
