--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,82 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_splash"
+<!-- TODO(gs)8/Apr/18 - Use ConstraintLayout. -->
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/activity_splash"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:layout_gravity="center"
+  android:orientation="vertical"
+  tools:context="gurpreetsk.me.tinyeye.SplashActivity"
+  >
+
+  <FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical"
-    tools:context="gurpreetsk.me.tinyeye.SplashActivity">
-<!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
+    android:layout_height="0dp"
+    android:layout_weight="1"
+    android:text="@string/ocr_search"
+    >
 
+    <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_gravity="center"
+      android:background="@drawable/text_reco_background"
+      android:contentDescription="@string/text_reco_background"
+      android:gravity="center"
+      android:scaleType="fitXY"
+      />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="@string/ocr_search">
+    <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:alpha="0.4"
+      android:background="@android:color/black"
+      />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@drawable/text_reco_background"
-            android:contentDescription="@string/text_reco_background"
-            android:gravity="center"
-            android:scaleType="fitXY" />
+    <Button
+      android:id="@+id/recogniseTextButton"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@android:color/transparent"
+      android:gravity="center"
+      android:text="@string/ocr_search"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      />
+  </FrameLayout>
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/black"
-            android:alpha="0.4"/>
+  <FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
+    android:text="@string/ocr_search"
+    >
 
-        <Button
-            android:id="@+id/recogniseTextButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:text="@string/ocr_search"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+    <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_gravity="center"
+      android:background="@drawable/image_reco_background"
+      android:contentDescription="@string/image_reco_background"
+      android:gravity="center"
+      android:scaleType="fitCenter"
+      />
 
-    </FrameLayout>
+    <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:alpha="0.4"
+      android:background="@android:color/black"
+      />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="@string/ocr_search">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@drawable/image_reco_background"
-            android:contentDescription="@string/image_reco_background"
-            android:gravity="center"
-            android:scaleType="fitCenter" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/black"
-            android:alpha="0.4"/>
-
-        <Button
-            android:id="@+id/recogniseImageButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:text="@string/other_searches"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-    </FrameLayout>
-
+    <Button
+      android:id="@+id/recogniseImageButton"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@android:color/transparent"
+      android:gravity="center"
+      android:text="@string/other_searches"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      />
+  </FrameLayout>
 </LinearLayout>
