--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFC107</color>
-    <color name="colorPrimaryDark">#FFA000</color>
-    <color name="colorAccent">#00BCD4</color>
-    <color name="tabstripTextColor">#FFFFFF</color>
-    <color name="placeholder">#A9A9A9</color>
-
+  <color name="colorPrimary">#FFC107</color>
+  <color name="colorPrimaryDark">#FFA000</color>
+  <color name="colorAccent">#00BCD4</color>
+  <color name="tabstripTextColor">#FFFFFF</color>
+  <color name="placeholder">#A9A9A9</color>
+  <color name="black_70">#70000000</color>
 </resources>
