--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,53 +1,60 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_settings"
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/activity_settings"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical"
+  android:paddingBottom="@dimen/activity_vertical_margin"
+  android:paddingLeft="@dimen/activity_horizontal_margin"
+  android:paddingRight="@dimen/activity_horizontal_margin"
+  android:paddingTop="@dimen/activity_vertical_margin"
+  tools:context=".feedback.FeedbackActivity"
+  >
+
+  <!-- TODO(gs) 8/Apr/18 - Move to TextInputLayout, get rid of this dependency. -->
+  <com.rengwuxian.materialedittext.MaterialEditText
+    android:id="@+id/usernameFeedbackEditText"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context=".FeedbackActivity">
+    android:layout_height="wrap_content"
+    android:hint="Enter Name"
+    app:met_floatingLabel="highlight"
+    app:met_floatingLabelTextColor="@color/colorPrimary"
+    app:met_minCharacters="5"
+    app:met_singleLineEllipsis="true"
+    />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter Name"
-        app:met_floatingLabel="highlight"
-        app:met_singleLineEllipsis="true"
-        app:met_floatingLabelTextColor="@color/colorPrimary"
-        app:met_minCharacters="5"
-        android:id="@+id/username_feedback_edittext"/>
+  <com.rengwuxian.materialedittext.MaterialEditText
+    android:id="@+id/contactFeedbackEditText"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="Enter Contact"
+    app:met_floatingLabel="highlight"
+    app:met_floatingLabelTextColor="@color/colorPrimary"
+    app:met_minCharacters="8"
+    app:met_singleLineEllipsis="true"
+    />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter Contact"
-        app:met_floatingLabel="highlight"
-        app:met_singleLineEllipsis="true"
-        app:met_floatingLabelTextColor="@color/colorPrimary"
-        app:met_minCharacters="8"
-        android:id="@+id/contact_feedback_edittext"/>
+  <com.rengwuxian.materialedittext.MaterialEditText
+    android:id="@+id/feedbackFeedbackEditText"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="Enter Feedback"
+    app:met_floatingLabel="highlight"
+    app:met_floatingLabelTextColor="@color/colorPrimary"
+    app:met_minCharacters="20"
+    app:met_singleLineEllipsis="true"
+    />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter Feedback"
-        app:met_floatingLabel="highlight"
-        app:met_floatingLabelTextColor="@color/colorPrimary"
-        app:met_singleLineEllipsis="true"
-        app:met_minCharacters="20"
-        android:id="@+id/feedback_feedback_edittext"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="?android:attr/selectableItemBackground"
-        android:elevation="4dp"
-        android:text="Submit"
-        android:id="@+id/submit_feedback_button" />
+  <Button
+    android:id="@+id/submitFeedbackButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="?android:attr/selectableItemBackground"
+    android:elevation="4dp"
+    android:text="Submit"
+    />
 
 </LinearLayout>
